[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/*',
    'primitives/*',
    'runtime/*',

    'rpc',
    'pallets/asset-index/rpc',
    'pallets/asset-index/rpc/runtime-api',
]
exclude = ["test-utils/xcm-test-support"]

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-election-provider-support = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-executive = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-support = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-support-procedural = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-system = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
frame-try-runtime = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
#max-encoded-len = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
#max-encoded-len-derive = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-aura = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-authorship = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-babe = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-balances = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-bounties = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-collective = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-democracy = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-grandpa = {git = 'https://github.com/paritytech//substrate', rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-identity = {git = 'https://github.com/paritytech//substrate', rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-im-online = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-indices = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-membership = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-mmr = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-mmr-primitives = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-mmr-rpc = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-multisig = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-nicks = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-offences = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-proxy = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-randomness-collective-flip = {git = 'https://github.com/paritytech//substrate', rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-recovery = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-session-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-scheduler = {git = 'https://github.com/paritytech//substrate', rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-sudo = {git = 'https://github.com/paritytech//substrate', rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-session = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-society = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-staking = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-timestamp = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-tips = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-treasury = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-utility = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
pallet-vesting = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
remote-externalities = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-block-builder = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-chain-spec = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-cli = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-client-api = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-client-db = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-consensus = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-executor = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-executor-common = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
#sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-informant = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-keystore = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-network = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-network-gossip = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-offchain = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-rpc = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-rpc-api = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-service = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-telemetry = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-tracing = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-api = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-application-crypto = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-arithmetic = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-block-builder = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-blockchain = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-consensus = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-core = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-debug-derive = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-externalities = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-inherents = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-io = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-keystore = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-npos-elections = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-offchain = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-rpc = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-runtime = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-serializer = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-session = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-staking = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-state-machine = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-std = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-storage = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-timestamp = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-tracing = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-trie = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-version = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
try-runtime-cli = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate", rev = "174735ea1bb5fc4513519c45181d8df63d86f613"}

[patch."https://github.com/paritytech/polkadot"]
xcm = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
xcm-executor = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
xcm-builder = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
pallet-xcm = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-parachain = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-primitives = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-core-primitives = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-runtime = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-runtime-common = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
rococo-runtime = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
westend-runtime = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
kusama-runtime = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-node-subsystem = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-statement-table = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-overseer = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-node-primitives = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-service = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-cli = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }
polkadot-client = { git = "https://github.com/paritytech//polkadot", rev = "f00a2772497aadddf75b8b4b475843ea0d910c48" }

[patch."https://github.com/paritytech/cumulus"]
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
pallet-collator-selection = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
parachain-info = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-client-cli = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-client-collator = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-client-network = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-client-service = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-primitives-core = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-primitives-utility = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-primitives-timestamp  = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech//cumulus", rev = "2317ef00dfa29a4d23fd6aa808d791a5dab82a02" }

[patch."https://github.com/open-web3-stack/open-runtime-module-library"]
orml-currencies = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
orml-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
orml-xtokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
orml-xcm-support = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
orml-traits = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
