[profile.release]
panic = 'unwind'

[workspace]
members = [
#    'node',
    'pallets/*',
    'primitives/*',
    'runtime/dev',
    'runtime/common',

    'rpc',
    'pallets/asset-index/rpc',
    'pallets/asset-index/rpc/runtime-api',
]
exclude = ["test-utils/xcm-test-support"]

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-election-provider-support = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-executive = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-support = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-support-procedural = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-system = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
frame-try-runtime = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
#max-encoded-len = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
#max-encoded-len-derive = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-aura = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-authorship = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-babe = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-balances = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-bounties = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-collective = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-democracy = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-grandpa = {git = 'https://github.com/paritytech//substrate', rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-identity = {git = 'https://github.com/paritytech//substrate', rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-im-online = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-indices = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-membership = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-mmr = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
#pallet-mmr-primitives = { git = "https://github.com/paritytech//substrate", rev = 'fcc54a72973d03afe7bf9e3ef2736050b3f33465'}
pallet-mmr-rpc = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-multisig = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-nicks = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-offences = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-proxy = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-randomness-collective-flip = {git = 'https://github.com/paritytech//substrate', rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-recovery = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-session-benchmarking = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-scheduler = {git = 'https://github.com/paritytech//substrate', rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-sudo = {git = 'https://github.com/paritytech//substrate', rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-session = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-society = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-staking = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-timestamp = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-tips = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-treasury = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-utility = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
pallet-vesting = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
remote-externalities = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-block-builder = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-chain-spec = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-cli = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-client-api = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-client-db = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-consensus = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-executor = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-executor-common = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
#sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-informant = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-keystore = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-network = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-network-gossip = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-offchain = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-rpc = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-rpc-api = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-service = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-telemetry = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-tracing = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-api = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-mmr-primitives = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-application-crypto = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-arithmetic = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-block-builder = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-blockchain = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-consensus = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-core = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-debug-derive = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-externalities = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-inherents = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-io = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-keystore = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-npos-elections = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-offchain = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-rpc = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-runtime = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-serializer = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-session = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-staking = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-state-machine = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-std = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-storage = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-timestamp = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-tracing = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-trie = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-version = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
try-runtime-cli = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate", rev = 'e8a7d161f39db70cb27fdad6c6e215cf493ebc3b'}

[patch."https://github.com/paritytech/polkadot"]
xcm = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
xcm-executor = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
xcm-builder = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
pallet-xcm = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-parachain = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-primitives = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-core-primitives = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-runtime = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-runtime-common = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
rococo-runtime = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
westend-runtime = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
kusama-runtime = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-runtime-parachains = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-node-network-protocol = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-node-subsystem = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-statement-table = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-test-service = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-test-runtime = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-overseer = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-node-primitives = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-service = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-cli = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-node-core-pvf = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-client = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}
polkadot-rpc = { git = "https://github.com/paritytech//polkadot", rev = 'd8785970175dce344f2a6ad1cd88297529a6dd59'}

[patch."https://github.com/paritytech/cumulus"]
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
pallet-collator-selection = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
parachain-info = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-client-cli = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-client-collator = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-client-network = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-client-service = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-primitives-core = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-primitives-utility = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-primitives-timestamp  = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech//cumulus", rev = "e43b8b878a6fd0ca8b5e88d19822c4d777d3c677" }

[patch."https://github.com/open-web3-stack/open-runtime-module-library"]
orml-currencies = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "33dbc5e35305d0cf5937c896dae8655ca7da95d8" }
orml-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "33dbc5e35305d0cf5937c896dae8655ca7da95d8" }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "33dbc5e35305d0cf5937c896dae8655ca7da95d8" }
orml-xtokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "33dbc5e35305d0cf5937c896dae8655ca7da95d8" }
orml-xcm-support = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "33dbc5e35305d0cf5937c896dae8655ca7da95d8" }
orml-traits = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "33dbc5e35305d0cf5937c896dae8655ca7da95d8" }
